webkitgtk (2.3.92-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Mon, 17 Mar 2014 10:34:24 +0000

webkitgtk (2.3.90-1) experimental; urgency=medium

  * New upstream release.
  * debian/libwebkitgtk-1.0-0.symbols,
    debian/libwebkitgtk-3.0-0.symbols,
    debian/libwebkit2gtk-3.0-25.symbols:
    + Add new symbols.
  * debian/control:
    + Update package descriptions.
    + Remove redundant Priority fields from libwebkitgtk-{1,3}.0-common.
    + Remove duplicate build dependency on flex.
  * debian/patches/install-minibrowser.patch:
    + Ship the MiniBrowser binary, which is useful for testing purposes.
  * debian/patches/dfg-jit.patch:
    + Enable DFG JIT on FreeBSD and Hurd.
  * debian/patches/fix-gtkdoc-error.patch:
    + Fix error in gtk-doc generation.
  * debian/patches/02_notebook_scroll.patch:
    + Refresh.

 -- Alberto Garcia <berto@igalia.com>  Tue, 18 Feb 2014 11:33:19 +0000

webkitgtk (2.3.5-1) experimental; urgency=low

  * New upstream release.
  * debian/patches/02_notebook_scroll.patch,
    debian/patches/enable_llint.patch,
    debian/patches/restore_sparc_code.patch:
    + Refresh.
  * debian/patches/x86_asm_fix.patch:
    + Remove, this has been merged upstream.
  * Build a libjavascriptcoregtk-3.0-bin package with the jsc interpreter
    + debian/control: add the new entry.
    + debian/rules: rename the binary from jsc-3 to jsc and add the
      suitable debhelper rules.
    + debian/libjavascriptcoregtk-3.0-bin.install: list package contents.
    + debian/libjavascriptcoregtk-3.0-bin.manpages,
      debian/jsc.1: add manual page.
  * debian/libwebkit2gtk-3.0-25.symbols:
    + Add new symbols.

 -- Alberto Garcia <berto@igalia.com>  Fri, 07 Feb 2014 10:22:37 +0000

webkitgtk (2.3.4-4) experimental; urgency=low

  * debian/patches/atomic_build_fix.patch:
    + Update the patch with a fix that actually works.

 -- Alberto Garcia <berto@igalia.com>  Sat, 01 Feb 2014 09:18:42 +0000
