@@ -8,8 +8,8 @@ Index: webkitgtk/Source/WTF/wtf/Platform.h
 @@ -716,7 +716,7 @@
  
  #if !defined(ENABLE_DFG_JIT) && ENABLE(JIT) && !COMPILER(MSVC)
- /* Enable the DFG JIT on X86 and X86_64.  Only tested on Mac and GNU/Linux. */
--#if (CPU(X86) || CPU(X86_64)) && (OS(DARWIN) || OS(LINUX))
+ /* Enable the DFG JIT on X86 and X86_64.  Only tested on Mac, GNU/Linux and FreeBSD. */
+-#if (CPU(X86) || CPU(X86_64)) && (OS(DARWIN) || OS(LINUX) || OS(FREEBSD))
 +#if (CPU(X86) || CPU(X86_64)) && (OS(DARWIN) || OS(LINUX) || OS(FREEBSD) || OS(HURD))
  #define ENABLE_DFG_JIT 1
  #endif
